# gazou

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  build.sh  install.sh  main.py  notes.txt  ocr.py  run.sh
app/: CMakeLists.txt
app/resources/: resources.qrc
app/src/: configwindow.cpp  configwindow.h  keydialog.cpp  keydialog.h  main.cpp  selectorwidget.cpp  utils.cpp
core/: CMakeLists.txt
core/include/: ocr.h
core/src/: ocr.cpp
ocr-core/: .gitignore  CMakeLists.txt
ocr-core/scripts/: train.py
ocr-core/src/: ocr.cpp
ocr-desktop/: .gitignore  CMakeLists.txt
ocr-desktop/src/: main.cpp
resources/: gazou.desktop  resources.qrc
src/: config.h.in  configwindow.cpp  configwindow.h  gui.cpp  gui.h  gui_x11.cpp  gui_x11.h  keydialog.cpp  keydialog.h  main.cpp  main.h  ocr.cpp  ocr.h  request.cpp  request.h  selectorwidget.cpp  selectorwidget.h  state.cpp  state.h  utils.cpp  utils.h
trainocr/: find_fonts.py  old_trainscript.sh  order_fonts.py  train.py  train.sh
web/client/: gatsby-config.js  package.json  tsconfig.json
web/client/src/pages/: index.tsx
